--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
       MANIFEST_AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
 
   build_and_push_docker:
-    name: Build and Push Docker Image
+    name: Pull from ECR and Push to DockerHub
     needs: release
     runs-on: ubuntu-latest
     steps:
@@ -58,10 +58,27 @@ jobs:
         with:
           ref: ${{ needs.release.outputs.commit_hash }}
 
-      - name: Build and Push Docker Image to DockerHub
+      - name: Get Commit Hash
+        id: get_commit_hash
+        run: |
+          echo "short_sha=$(git rev-parse HEAD | cut -c1-10)" >> $GITHUB_OUTPUT
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@7474bc4690e29a8392af63c5b98e7449536d5c3a # v4.3.1
+        with:
+          aws-access-key-id: ${{ secrets.SAM_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.SAM_AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076 # v2.0.1
+
+      - name: Pull from ECR and Push to DockerHub
         uses: ./.github/actions/push-docker
         with:
           version_tag: ${{ needs.release.outputs.new_version }}
           push_latest: true
           docker_username: ${{ secrets.DOCKER_USERNAME }}
           docker_password: ${{ secrets.DOCKER_PASSWORD }}
+          source_registry: ${{ secrets.SAM_AWS_ECR_REGISTRY }}
+          source_image_tag: ${{ needs.release.outputs.new_version }}-${{ steps.get_commit_hash.outputs.short_sha }}
