--- a/.github/actions/push-docker/action.yml
+++ b/.github/actions/push-docker/action.yml
@@ -27,13 +27,13 @@ runs:
   using: "composite"
   steps:
     - name: Setup Qemu
-      uses: docker/setup-qemu-action@v3.6.0
+      uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.6.0
 
     - name: Setup Docker Buildx
-      uses: docker/setup-buildx-action@v3.10.0
+      uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
 
     - name: Login to Docker Hub
-      uses: docker/login-action@v3.4.0
+      uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
       with:
         username: ${{ inputs.docker_username }}
         password: ${{ inputs.docker_password }}
