feat(prompts): Add automated tests for Prompts feature and fix migration
- Add 10 declarative YAML tests for prompts endpoints (all passing)
- Fix Alembic migration for SQLite/PostgreSQL compatibility
- Use batch_alter_table for cross-database foreign key support
- Add pytest markers: prompts, versioning, search, projects, crud, validation, error

Tests cover:
- CRUD operations (create, read, update, delete)
- Version management (version creation)
- Validation (duplicate command rejection)
- Search and filtering (search, category filter)
- Error handling (404 responses)

Migration fix:
- Create prompts table first (no circular dependency)
- Use batch_alter_table for adding foreign keys (SQLite-safe)
- Compatible with SQLite (copy-move) and PostgreSQL (ALTER TABLE)

Run tests: python -m pytest tests/integration/scenarios_declarative/ -m prompts -v

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,6 +160,17 @@ markers = [
     "artifacts: marks tests related to artifact handling and services",
     "api: marks tests related to the API",
     "tasks: marks tests related to task management",
+    "projects: marks tests related to project management",
+    "default_agent: marks tests related to default agent functionality",
+    "crud: marks tests related to CRUD operations",
+    "templates: marks tests related to template operations",
+    "pagination: marks tests related to pagination functionality",
+    "security: marks tests related to security and authorization",
+    "error: marks tests related to error handling scenarios",
+    "validation: marks tests related to input validation",
+    "prompts: marks tests related to the prompts library feature",
+    "versioning: marks tests related to version management",
+    "search: marks tests related to search and filtering functionality",
 
     # Agent Tools
     # Markers for the built-in agent tools.
