feat: Change default persistence from memory to SQL with SQLite
This commit changes the default session persistence type from in-memory
to SQL with SQLite for all preset agent configurations. This provides
persistence by default while maintaining simplicity for local development.

Changes:
- Update preset YAML configs to use 'sql' type instead of 'memory'
- All agents now default to SQLite file-based persistence
- Users can override with PostgreSQL via environment variables
- Users can revert to memory by setting PERSISTENCE_TYPE=memory
- Move boto3 and psycopg2-binary to required dependencies

Documentation updates:
- Expanded Session Service section with detailed explanations
- Added configuration examples for SQLite, PostgreSQL, and in-memory
- Added environment variables table for all preset components
- Explained choosing between storage backends for different deployments
- Clarified Docker and Kubernetes deployment patterns
- Improved writing style per documentation guidelines

Dependencies:
- boto3==1.40.37 is now a required dependency
- psycopg2-binary==2.9.10 is now a required dependency
- This ensures PostgreSQL support is always available

Benefits:
- Local development: Sessions persist across restarts automatically
- Docker: Works with volume mounts for persistence
- Kubernetes/Helm: Easy to configure PostgreSQL via env vars
- No breaking changes: Backward compatible via PERSISTENCE_TYPE env var

For Helm/Kubernetes deployments, users set database URL environment
variables to point to PostgreSQL, eliminating the need for volume
management of SQLite files.

--- a/preset/agents/basic/main_orchestrator.yaml
+++ b/preset/agents/basic/main_orchestrator.yaml
@@ -38,7 +38,7 @@ apps:
       inject_response_format: true
       inject_user_profile: true
       session_service:
-        type: "${PERSISTENCE_TYPE, memory}"
+        type: "${PERSISTENCE_TYPE, sql}"
         database_url: "${ORCHESTRATOR_DATABASE_URL, sqlite:///orchestrator-agent.db}"
         default_behavior: "PERSISTENT"
       artifact_service: *default_artifact_service
