--- a/preset/agents/mermaid_agents.yaml
+++ b/preset/agents/mermaid_agents.yaml
@@ -38,7 +38,7 @@ apps:
         - tool_type: builtin-group
           group_name: "artifact_management"
       session_service:
-        type: "${PERSISTENCE_TYPE, memory}"
+        type: "${PERSISTENCE_TYPE, sql}"
         database_url: "${AGENT_MERMAID_DATABASE_URL, sqlite:///mermaid-agent.db}"
         default_behavior: "PERSISTENT"
       artifact_service: *default_artifact_service
