--- a/preset/agents/web_agents.yaml
+++ b/preset/agents/web_agents.yaml
@@ -31,7 +31,7 @@ apps:
         - tool_type: builtin-group
           group_name: "artifact_management"
       session_service:
-        type: "${PERSISTENCE_TYPE, memory}"
+        type: "${PERSISTENCE_TYPE, sql}"
         database_url: "${AGENT_WEB_DATABASE_URL, sqlite:///web-agent.db}"
         default_behavior: "PERSISTENT"
       artifact_service: *default_artifact_service
