feat: Change default persistence from memory to SQL with SQLite (#479)
* feat: Change default persistence from memory to SQL with SQLite

This commit changes the default session persistence type from in-memory
to SQL with SQLite for all preset agent configurations. This provides
persistence by default while maintaining simplicity for local development.

Changes:
- Update preset YAML configs to use 'sql' type instead of 'memory'
- All agents now default to SQLite file-based persistence
- Users can override with PostgreSQL via environment variables
- Users can revert to memory by setting PERSISTENCE_TYPE=memory
- Move boto3 and psycopg2-binary to required dependencies

Documentation updates:
- Expanded Session Service section with detailed explanations
- Added configuration examples for SQLite, PostgreSQL, and in-memory
- Added environment variables table for all preset components
- Explained choosing between storage backends for different deployments
- Clarified Docker and Kubernetes deployment patterns
- Improved writing style per documentation guidelines

Dependencies:
- boto3==1.40.37 is now a required dependency
- psycopg2-binary==2.9.10 is now a required dependency
- This ensures PostgreSQL support is always available

Benefits:
- Local development: Sessions persist across restarts automatically
- Docker: Works with volume mounts for persistence
- Kubernetes/Helm: Easy to configure PostgreSQL via env vars
- No breaking changes: Backward compatible via PERSISTENCE_TYPE env var

For Helm/Kubernetes deployments, users set database URL environment
variables to point to PostgreSQL, eliminating the need for volume
management of SQLite files.

* fix: Remove non-existent extras from test dependencies

Since postgresql and s3 dependencies are now in the main dependencies,
remove them from the optional extras list in test configuration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,21 +60,21 @@ dependencies = [
     "rouge==1.0.1",
     "SQLAlchemy==2.0.40",
     "alembic==1.16.5",
-    "openai==1.99.9"
+    "openai==1.99.9",
+    "boto3==1.40.37",
+    "psycopg2-binary==2.9.10"
 ]
 
 [project.optional-dependencies]
 gcs = ["google-cloud-storage==2.19.0"]
-s3 = ["boto3==1.40.37"]
 vertex = ["google-cloud-aiplatform==1.120.0"]
 employee_tools = ["holidays==0.81.0"]
-postgresql = ["psycopg2-binary==2.9.10"]
 
 [tool.hatch.envs.hatch-test]
 parallel = false
 installer = "uv"
 dependencies = [
-    "solace-agent-mesh[postgresql,gcs,vertex,employee_tools,s3]",
+    "solace-agent-mesh[gcs,vertex,employee_tools]",
     "pytest-asyncio",
     "pytest>=8.0.0",
     "pytest-mock>=3.0.0",
