chore(DATAGO-114141): Added gateway adapter plugins (#449)
## Summary

Adds a generic gateway adapter framework and implements a complete Slack gateway adapter with artifact and feedback support.

### Key Changes

**Gateway Adapter Framework**
- Created generic adapter framework with base types and interfaces (`gateway/adapter/base.py`, `types.py`)
- Implemented `GenericGatewayComponent` with adapter orchestration (`gateway/generic/component.py`)
- Added `GenericGatewayApp` with dynamic adapter loading based on configuration schema
- Moved common gateway configs to base class for reusability

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -65,7 +65,7 @@
             }
         },
         {
-            "name": "SAM (slack gateway)",
+            "name": "SAM (test with Slack)",
             "type": "debugpy",
             "request": "launch",
             "module": "solace_ai_connector.main",
