--- a/client/webui/frontend/package.json
+++ b/client/webui/frontend/package.json
@@ -69,6 +69,7 @@
         "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-popover": "^1.1.14",
         "@radix-ui/react-scroll-area": "^1.2.10",
@@ -88,7 +89,6 @@
         "json-edit-react": "^1.27.2",
         "lucide-react": "^0.511.0",
         "marked": "^15.0.12",
-        "radix-ui": "^1.4.2",
         "react": ">=19.0.0",
         "react-dom": ">=19.0.0",
         "react-hook-form": "^7.65.0",
