--- a/examples/agents/orchestrator_example.yaml
+++ b/examples/agents/orchestrator_example.yaml
@@ -65,7 +65,18 @@ apps:
         description: "The Orchestrator component. It manages tasks and coordinates multi-agent workflows."
         defaultInputModes: ["text"] # Optional, Defaults to ["text"] if omitted
         defaultOutputModes: ["text", "file"] # Indicate potential file output
-        skills: [] # Keep, but now optional (defaults to empty list)
+        skills:
+        - id: strategic_planning
+          name: Strategic Planning
+          description: Analyzes complex requests and creates structured execution plans, breaking down multi-step goals into logical sequences with clear checkpoints and progress tracking.
+
+        - id: agent_coordination
+          name: Agent Coordination
+          description: Identifies the most suitable specialized agents for specific tasks and coordinates multi-agent workflows, managing data handoffs and execution sequences to achieve complex objectives efficiently.
+
+        - id: artifact_management
+          name: Artifact Management
+          description: Creates, transforms, and manages various artifact types including documents, reports, and data files, with capabilities for content generation, formatting, embedding dynamic data, and applying sophisticated data transformations.
         # documentationUrl: Optional
         # provider: Optional
       # Discovery & Communication
