--- a/templates/main_orchestrator.yaml
+++ b/templates/main_orchestrator.yaml
@@ -43,7 +43,18 @@ apps:
         description: "__AGENT_CARD_DESCRIPTION__"
         defaultInputModes: __DEFAULT_INPUT_MODES__
         defaultOutputModes: __DEFAULT_OUTPUT_MODES__
-        skills: [] 
+        skills:
+        - id: strategic_planning
+          name: Strategic Planning
+          description: Analyzes complex requests and creates structured execution plans, breaking down multi-step goals into logical sequences with clear checkpoints and progress tracking.
+
+        - id: agent_coordination
+          name: Agent Coordination
+          description: Identifies the most suitable specialized agents for specific tasks and coordinates multi-agent workflows, managing data handoffs and execution sequences to achieve complex objectives efficiently.
+
+        - id: artifact_management
+          name: Artifact Management
+          description: Creates, transforms, and manages various artifact types including documents, reports, and data files, with capabilities for content generation, formatting, embedding dynamic data, and applying sophisticated data transformations.
 
       agent_card_publishing: 
         interval_seconds: __AGENT_CARD_PUBLISHING_INTERVAL__
